# load-summarize-chain

./: _tmp_verify.py  _tmp_verify2.py  app_streamlit.py  doc_structure.py  evaluation.py  map_reduce_vllm.py  pdf_ocr.py  pyproject.toml  requirements.txt  summary-map-reduce.txt
ai_docs/: chunking-and-metadata-reference.md  chunking-logic.md  plan.md  plan_0611.md  project-analysis-zh-TW.md  structure-detection.md
tests/: test_doc_structure.py
