[tool.poetry]
name = "load-summarize-chain"
version = "0.1.0"
description = ""
authors = ["Pisek <psk.light@gmail.com>"]
readme = "README.md"
package-mode = false

[project]
name = "load-summarize-chain"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
	"langchain-core>=0.3.28,<0.4.0",
	"langchain>=0.3.13,<0.4.0",
	"langchain-ollama>=0.2.2,<0.3.0",
	"tiktoken>=0.8.0,<0.9.0",
	"langchain-openai>=0.2.14,<0.3.0",
	"openai>=1.58.1,<2.0.0",
	"opencc-python-reimplemented>=0.1.7,<0.2.0",
	"jupyter>=1.1.1,<2.0.0",
	"streamlit>=1.57.0",
	"paddleocr[doc-parser]>=3.5.0",
	"paddlepaddle>=3.3.1",
	"opencv-contrib-python>=4.10.0.84",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
langchain-core = "^0.3.28"
langchain = "^0.3.13"
langchain-ollama = "^0.2.2"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.14"
openai = "^1.58.1"
opencc-python-reimplemented = "^0.1.7"
jupyter = "^1.1.1"

[tool.uv]
package = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
